backend/tests/snapshots/golden_tools__memory_write__second.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "entity": {
    "id": "person:<id1>",
    "kind": "person",
    "name": "Alice",
    "aliases": [],
    "summary": ""
  },
  "memory": {
    "id": "memory:<id5>",
    "owner": "user:<id3>",
    "vault": "vault:<id4>",
    "subject": "person:<id1>",
    "text": "Alice works at Acme",
    "source": null,
    "created_at": "<ts>",
    "type": "experience",
    "proof_count": 1,
    "status": null,
    "source_memories": null,
    "updated_at": "<ts>",
    "version": 1,
    "owner_email": null
  }
}
